--- a/notebooks/02_analyze_library.ipynb
+++ b/notebooks/02_analyze_library.ipynb
@@ -1367,7 +1367,8 @@
     "\n",
     "**Next steps:**\n",
     "- `03_playlist_analysis.ipynb` - Deep dive into playlist genres and clustering\n",
-    "- `04_liked_songs_monthly_playlists.ipynb` - Split liked songs into monthly playlists"
+    "- `04_analyze_listening_history.ipynb` - Analyze your actual listening patterns\n",
+    "- `05_liked_songs_monthly_playlists.ipynb` - Create monthly playlists"
    ]
   }
  ],
