--- a/notebooks/03_playlist_analysis.ipynb
+++ b/notebooks/03_playlist_analysis.ipynb
@@ -1353,6 +1353,106 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Load streaming history if available\n",
+    "from spotim8.streaming_history import load_streaming_history\n",
+    "from spotim8.genres import get_broad_genre, get_genres_list\n",
+    "from collections import Counter\n",
+    "\n",
+    "history_df = load_streaming_history(DATA_DIR)\n",
+    "\n",
+    "if history_df is not None and len(history_df) > 0:\n",
+    "    print(\"=\"*60)\n",
+    "    print(\"📊 LISTENING-BASED GENRE ANALYSIS\")\n",
+    "    print(\"=\"*60)\n",
+    "    \n",
+    "    # Get artist genres for tracks in listening history\n",
+    "    # Match by artist name (approximate)\n",
+    "    listened_artists = set(history_df['artist_name'].str.lower().dropna())\n",
+    "    library_artists_lower = artists['name'].str.lower()\n",
+    "    \n",
+    "    # Build genre distribution from actual listening\n",
+    "    listening_genres = []\n",
+    "    for artist_name in listened_artists:\n",
+    "        # Find matching artist in library\n",
+    "        matches = artists[library_artists_lower == artist_name]\n",
+    "        if len(matches) > 0:\n",
+    "            artist_genres = get_genres_list(matches.iloc[0]['genres'])\n",
+    "            broad_genre = get_broad_genre(artist_genres)\n",
+    "            if broad_genre:\n",
+    "                listening_genres.append(broad_genre)\n",
+    "    \n",
+    "    listening_genre_counts = Counter(listening_genres)\n",
+    "    \n",
+    "    # Compare with library genre distribution\n",
+    "    library_genres = []\n",
+    "    for _, artist in artists.iterrows():\n",
+    "        artist_genres = get_genres_list(artist['genres'])\n",
+    "        broad_genre = get_broad_genre(artist_genres)\n",
+    "        if broad_genre:\n",
+    "            library_genres.append(broad_genre)\n",
+    "    \n",
+    "    library_genre_counts = Counter(library_genres)\n",
+    "    \n",
+    "    print(\"\\n🎸 TOP GENRES YOU ACTUALLY LISTEN TO:\")\n",
+    "    for genre, count in listening_genre_counts.most_common(10):\n",
+    "        pct = count / len(listening_genres) * 100 if listening_genres else 0\n",
+    "        print(f\"   • {genre:20} {count:>4} artists ({pct:>5.1f}%)\")\n",
+    "    \n",
+    "    print(\"\\n🎸 TOP GENRES IN YOUR LIBRARY:\")\n",
+    "    for genre, count in library_genre_counts.most_common(10):\n",
+    "        pct = count / len(library_genres) * 100 if library_genres else 0\n",
+    "        print(f\"   • {genre:20} {count:>4} artists ({pct:>5.1f}%)\")\n",
+    "    \n",
+    "    # Find genres you listen to but don't have much of in library\n",
+    "    listening_only = set(listening_genre_counts.keys()) - set(library_genre_counts.keys())\n",
+    "    if listening_only:\n",
+    "        print(f\"\\n💡 Genres you listen to but don't have in library:\")\n",
+    "        for genre in list(listening_only)[:5]:\n",
+    "            count = listening_genre_counts[genre]\n",
+    "            print(f\"   • {genre} ({count} artists)\")\n",
+    "    \n",
+    "    # Genre listening trends over time\n",
+    "    if 'month' in history_df.columns:\n",
+    "        print(f\"\\n📈 Genre Listening Trends (Last 6 Months):\")\n",
+    "        recent_months = sorted(history_df['month'].astype(str).unique())[-6:]\n",
+    "        for month in recent_months:\n",
+    "            month_data = history_df[history_df['month'].astype(str) == month]\n",
+    "            month_artists = set(month_data['artist_name'].str.lower().dropna())\n",
+    "            month_genres = []\n",
+    "            for artist_name in month_artists:\n",
+    "                matches = artists[library_artists_lower == artist_name]\n",
+    "                if len(matches) > 0:\n",
+    "                    artist_genres = get_genres_list(matches.iloc[0]['genres'])\n",
+    "                    broad_genre = get_broad_genre(artist_genres)\n",
+    "                    if broad_genre:\n",
+    "                        month_genres.append(broad_genre)\n",
+    "            if month_genres:\n",
+    "                top_genre = Counter(month_genres).most_common(1)[0]\n",
+    "                print(f\"   • {month}: {top_genre[0]} ({top_genre[1]} artists)\")\n",
+    "else:\n",
+    "    print(\"⚠️  No streaming history data available\")\n",
+    "    print(\"   Run 04_analyze_listening_history.ipynb to enable this analysis\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "\n",
+    "## ✅ Analysis Complete!\n",
+    "\n",
+    "**Next:** \n",
+    "- `04_analyze_listening_history.ipynb` - Analyze your actual listening patterns\n",
+    "- `05_liked_songs_monthly_playlists.ipynb` - Create monthly playlists\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
