--- a/notebooks/05_liked_songs_monthly_playlists.ipynb
+++ b/notebooks/05_liked_songs_monthly_playlists.ipynb
@@ -8,7 +8,9 @@
     "\n",
     "**⚠️ Note:** This notebook is for **manual/one-time use** or **previewing** playlist creation. For automated daily updates, use `scripts/sync.py` instead (configured via cron job).\n",
     "\n",
-    "**Prerequisites:** Run `01_sync_data.ipynb` first to download your library.\n",
+    "**Prerequisites:** \n",
+    "- Run `01_sync_data.ipynb` to download your library\n",
+    "- Run `04_analyze_listening_history.ipynb` (optional) to sync streaming history for enhanced features\n",
     "\n",
     "## 🤖 Current Automation Status\n",
     "\n",
@@ -305,10 +307,10 @@
      "output_type": "stream",
      "text": [
       "✅ Loaded library (OWNED PLAYLISTS ONLY)\n",
-      "   • 221 owned playlists\n",
-      "   • 42,375 playlist-track links\n",
-      "✅ Loaded 5,280 tracks\n",
-      "✅ Loaded 2,618 artists\n"
+      "   • 202 owned playlists\n",
+      "   • 53,170 playlist-track links\n",
+      "✅ Loaded 5,367 tracks\n",
+      "✅ Loaded 2,674 artists\n"
      ]
     }
    ],
@@ -387,26 +389,26 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/var/folders/t5/pfc67fz125q3l2d_jvn8xh2c0000gq/T/ipykernel_35560/2140193431.py:26: UserWarning: Converting to PeriodArray/Index representation will drop timezone information.\n",
-      "  liked[\"month\"] = liked[added_at_col].dt.to_period(\"M\").astype(str)\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "✅ Found 5,122 liked songs\n",
-      "📅 Spanning 51 months\n",
+      "✅ Found 5,209 liked songs\n",
+      "📅 Spanning 52 months\n",
       "\n",
       "📊 Recent months:\n",
-      "   2025-08: 153 tracks\n",
       "   2025-09: 69 tracks\n",
       "   2025-10: 89 tracks\n",
       "   2025-11: 228 tracks\n",
-      "   2025-12: 88 tracks\n"
+      "   2025-12: 135 tracks\n",
+      "   2026-01: 40 tracks\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/t5/pfc67fz125q3l2d_jvn8xh2c0000gq/T/ipykernel_36240/2140193431.py:26: UserWarning: Converting to PeriodArray/Index representation will drop timezone information.\n",
+      "  liked[\"month\"] = liked[added_at_col].dt.to_period(\"M\").astype(str)\n"
      ]
     }
    ],
@@ -565,91 +567,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "📅 Processing 51 months (out of 51 total)\n",
-      "\n",
-      "👤 User: 31iol2qamank24owygxo7kpq533y\n",
-      "📋 Template: {owner}{prefix}{mon}{year}\n",
-      "   Example: AJFindsDec25\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Months: 100%|██████████| 51/51 [00:00<00:00, 116192.02it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[DRY RUN] AJFindsSep21 → 1 tracks\n",
-      "[DRY RUN] AJFindsOct21 → 1030 tracks\n",
-      "[DRY RUN] AJFindsNov21 → 149 tracks\n",
-      "[DRY RUN] AJFindsDec21 → 130 tracks\n",
-      "[DRY RUN] AJFindsJan22 → 129 tracks\n",
-      "[DRY RUN] AJFindsFeb22 → 5 tracks\n",
-      "[DRY RUN] AJFindsMar22 → 72 tracks\n",
-      "[DRY RUN] AJFindsApr22 → 53 tracks\n",
-      "[DRY RUN] AJFindsMay22 → 72 tracks\n",
-      "[DRY RUN] AJFindsJun22 → 106 tracks\n",
-      "[DRY RUN] AJFindsJul22 → 45 tracks\n",
-      "[DRY RUN] AJFindsAug22 → 185 tracks\n",
-      "[DRY RUN] AJFindsSep22 → 21 tracks\n",
-      "[DRY RUN] AJFindsOct22 → 43 tracks\n",
-      "[DRY RUN] AJFindsNov22 → 6 tracks\n",
-      "[DRY RUN] AJFindsDec22 → 413 tracks\n",
-      "[DRY RUN] AJFindsJan23 → 206 tracks\n",
-      "[DRY RUN] AJFindsFeb23 → 192 tracks\n",
-      "[DRY RUN] AJFindsMar23 → 318 tracks\n",
-      "[DRY RUN] AJFindsApr23 → 125 tracks\n",
-      "[DRY RUN] AJFindsMay23 → 77 tracks\n",
-      "[DRY RUN] AJFindsJun23 → 30 tracks\n",
-      "[DRY RUN] AJFindsJul23 → 46 tracks\n",
-      "[DRY RUN] AJFindsAug23 → 93 tracks\n",
-      "[DRY RUN] AJFindsSep23 → 48 tracks\n",
-      "[DRY RUN] AJFindsOct23 → 26 tracks\n",
-      "[DRY RUN] AJFindsNov23 → 36 tracks\n",
-      "[DRY RUN] AJFindsDec23 → 36 tracks\n",
-      "[DRY RUN] AJFindsJan24 → 36 tracks\n",
-      "[DRY RUN] AJFindsFeb24 → 88 tracks\n",
-      "[DRY RUN] AJFindsMar24 → 6 tracks\n",
-      "[DRY RUN] AJFindsApr24 → 2 tracks\n",
-      "[DRY RUN] AJFindsMay24 → 75 tracks\n",
-      "[DRY RUN] AJFindsJun24 → 113 tracks\n",
-      "[DRY RUN] AJFindsJul24 → 33 tracks\n",
-      "[DRY RUN] AJFindsAug24 → 41 tracks\n",
-      "[DRY RUN] AJFindsSep24 → 36 tracks\n",
-      "[DRY RUN] AJFindsOct24 → 3 tracks\n",
-      "[DRY RUN] AJFindsDec24 → 1 tracks\n",
-      "[DRY RUN] AJFindsJan25 → 11 tracks\n",
-      "[DRY RUN] AJFindsFeb25 → 13 tracks\n",
-      "[DRY RUN] AJFindsMar25 → 23 tracks\n",
-      "[DRY RUN] AJFindsApr25 → 72 tracks\n",
-      "[DRY RUN] AJFindsMay25 → 81 tracks\n",
-      "[DRY RUN] AJFindsJun25 → 78 tracks\n",
-      "[DRY RUN] AJFindsJul25 → 90 tracks\n",
-      "[DRY RUN] AJFindsAug25 → 153 tracks\n",
-      "[DRY RUN] AJFindsSep25 → 69 tracks\n",
-      "[DRY RUN] AJFindsOct25 → 89 tracks\n",
-      "[DRY RUN] AJFindsNov25 → 228 tracks\n",
-      "[DRY RUN] AJFindsDec25 → 88 tracks\n",
-      "\n",
-      "✅ Monthly playlists done!\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
+      "📅 Processing 52 months (out of 52 total)\n",
       "\n"
      ]
     }
@@ -720,7 +645,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -853,7 +778,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1109,7 +1034,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1189,7 +1114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1309,7 +1234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1394,7 +1319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1440,7 +1365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1645,7 +1570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1671,38 +1596,76 @@
    "source": [
     "# Run the Top Played monthly playlist builder\n",
     "if ENABLE_TOP_PLAYED:\n",
-    "    print(f\"📂 Looking for streaming history in: {STREAMING_HISTORY_DIR}\")\n",
+    "    # Use the new streaming_history module\n",
+    "    from spotim8.streaming_history import load_streaming_history as load_history_parquet\n",
+    "    from pathlib import Path\n",
     "    \n",
-    "    streaming_df = load_streaming_history(STREAMING_HISTORY_DIR)\n",
+    "    # Try loading from parquet (synced data)\n",
+    "    history_df = load_history_parquet(DATA_DIR)\n",
     "    \n",
-    "    if streaming_df is None:\n",
+    "    if history_df is None or len(history_df) == 0:\n",
     "        print(\"\\n⚠️ No streaming history found!\")\n",
     "        print(\"\\n📋 To enable this feature:\")\n",
     "        print(\"   1. Go to https://www.spotify.com/account/privacy/\")\n",
-    "        print(\"   2. Request 'Extended streaming history'\")\n",
-    "        print(\"   3. Wait for email (up to 30 days)\")\n",
-    "        print(\"   4. Download and extract to data/streaming_history/\")\n",
-    "        print(\"\\n   Expected files:\")\n",
-    "        print(\"   - endsong_0.json, endsong_1.json, ... (extended)\")\n",
-    "        print(\"   - OR StreamingHistory0.json, ... (basic)\")\n",
+    "        print(\"   2. Request your Spotify data export\")\n",
+    "        print(\"   3. Place folders in project root:\")\n",
+    "        print(\"      - 'Spotify Account Data/'\")\n",
+    "        print(\"      - 'Spotify Extended Streaming History/'\")\n",
+    "        print(\"   4. Run the streaming history sync in 04_analyze_listening_history.ipynb\")\n",
     "    else:\n",
-    "        print(f\"\\n✅ Loaded {len(streaming_df):,} streaming records\")\n",
-    "        print(f\"   Date range: {streaming_df['end_time'].min()} to {streaming_df['end_time'].max()}\")\n",
+    "        print(f\"\\n✅ Loaded {len(history_df):,} streaming history records\")\n",
+    "        print(f\"   Date range: {history_df['timestamp'].min()} to {history_df['timestamp'].max()}\")\n",
     "        \n",
-    "        if sf is None:\n",
-    "            print(\"\\n⚠️ Spotify not connected. Showing preview only...\")\n",
-    "            # Just show stats\n",
-    "            valid = streaming_df[streaming_df['ms_played'] >= MIN_SECONDS_PLAYED * 1000]\n",
-    "            valid['month'] = valid['end_time'].dt.to_period('M').astype(str)\n",
-    "            print(f\"\\n📊 Preview of recent months:\")\n",
-    "            for month in sorted(valid['month'].unique())[-5:]:\n",
-    "                count = len(valid[valid['month'] == month])\n",
-    "                print(f\"   {month}: {count} valid plays\")\n",
-    "        else:\n",
+    "        # Filter to valid plays\n",
+    "        valid = history_df[\n",
+    "            (history_df['minutes_played'] * 60 >= MIN_SECONDS_PLAYED) &\n",
+    "            (history_df['track_name'].notna()) &\n",
+    "            (history_df['track_name'] != '')\n",
+    "        ].copy()\n",
+    "        \n",
+    "        # Add month column if not present\n",
+    "        if 'month' not in valid.columns:\n",
+    "            valid['month'] = valid['timestamp'].dt.to_period('M').astype(str)\n",
+    "        \n",
+    "        # Preview: Show what would be created\n",
+    "        print(f\"\\n📊 Preview: Most Played Tracks by Month (Top {TOP_N_PER_MONTH}):\")\n",
+    "        recent_months = sorted(valid['month'].unique())[-3:]\n",
+    "        \n",
+    "        for month in recent_months:\n",
+    "            month_data = valid[valid['month'] == month]\n",
+    "            track_plays = month_data.groupby(['artist_name', 'track_name']).size().reset_index(name='plays')\n",
+    "            track_plays = track_plays[track_plays['plays'] >= MIN_PLAYS].sort_values('plays', ascending=False).head(TOP_N_PER_MONTH)\n",
+    "            \n",
+    "            if len(track_plays) > 0:\n",
+    "                parts = month.split(\"-\")\n",
+    "                year = parts[0][2:] if len(parts) >= 1 else \"\"\n",
+    "                month_num = parts[1] if len(parts) >= 2 else \"\"\n",
+    "                mon = MONTH_NAMES.get(month_num, month_num)\n",
+    "                playlist_name = TOP_PLAYED_TEMPLATE.format(owner=OWNER_NAME, prefix=PREFIX, mon=mon, year=year)\n",
+    "                \n",
+    "                print(f\"\\n   {playlist_name}:\")\n",
+    "                for i, (_, row) in enumerate(track_plays.head(5).iterrows(), 1):\n",
+    "                    print(f\"      {i}. {row['artist_name']} - {row['track_name'][:40]} ({row['plays']} plays)\")\n",
+    "                if len(track_plays) > 5:\n",
+    "                    print(f\"      ... and {len(track_plays) - 5} more\")\n",
+    "        \n",
+    "        if sf is not None and not DRY_RUN:\n",
+    "            print(f\"\\n🎧 Creating playlists...\")\n",
+    "            # Use the builder from sync.py approach\n",
     "            builder = TopPlayedMonthlyBuilder(\n",
     "                sf, OWNER_NAME, TOP_PLAYED_TEMPLATE,\n",
-    "                tracks_df=tracks if 'tracks' in dir() else None\n",
+    "                tracks_df=None\n",
     "            )\n",
+    "            # Convert to expected format\n",
+    "            streaming_df = valid.rename(columns={\n",
+    "                'timestamp': 'end_time',\n",
+    "                'minutes_played': 'ms_played'\n",
+    "            })\n",
+    "            streaming_df['ms_played'] = streaming_df['ms_played'] * 60000  # Convert to ms\n",
+    "            streaming_df['track_uri'] = streaming_df.get('track_id', '').apply(\n",
+    "                lambda x: f\"spotify:track:{x}\" if x and pd.notna(x) else ''\n",
+    "            )\n",
+    "            \n",
     "            builder.build(\n",
     "                streaming_df,\n",
     "                top_n=TOP_N_PER_MONTH,\n",
@@ -1710,6 +1673,8 @@
     "                min_seconds=MIN_SECONDS_PLAYED,\n",
     "                dry_run=DRY_RUN\n",
     "            )\n",
+    "        elif DRY_RUN:\n",
+    "            print(f\"\\n💡 Set DRY_RUN = False and connect to Spotify to create playlists\")\n",
     "else:\n",
     "    print(\"⏭️ Top Played monthly playlists disabled. Set ENABLE_TOP_PLAYED = True to enable.\")"
    ]
@@ -1768,7 +1733,9 @@
     "- Monthly: `\"{year} — {mon}\"` → \"2024 — 01\"\n",
     "- Genre: `\"🎸 {owner}'s {genre}\"` → \"🎸 AJ's Rock\"\n",
     "\n",
-    "**Note:** The automation script uses the same naming templates configured in your `.env` file (PLAYLIST_OWNER_NAME, PLAYLIST_PREFIX)."
+    "**Note:** The automation script uses the same naming templates configured in your `.env` file (PLAYLIST_OWNER_NAME, PLAYLIST_PREFIX).\n",
+    "\n",
+    "**Next:** Try `06_identify_redundant_playlists.ipynb` to find and consolidate similar playlists."
    ]
   }
  ],
