--- a/notebooks/06_identify_redundant_playlists.ipynb
+++ b/notebooks/06_identify_redundant_playlists.ipynb
@@ -15,7 +15,9 @@
         "- 📋 Proposes a reorganized library structure\n",
         "- 💡 Recommends consolidation strategies\n",
         "\n",
-        "**Prerequisites:** Run `01_sync_data.ipynb` first to download your library.\n"
+        "**Prerequisites:** \n",
+        "- Run `01_sync_data.ipynb` to download your library\n",
+        "- Run `04_analyze_listening_history.ipynb` (optional) to enable listening-based redundancy detection\n"
       ]
     },
     {
@@ -1472,6 +1474,187 @@
       ]
     },
     {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Load streaming history if available\n",
+        "from spotim8.streaming_history import load_streaming_history\n",
+        "\n",
+        "history_df = load_streaming_history(DATA_DIR)\n",
+        "\n",
+        "if history_df is not None and len(history_df) > 0:\n",
+        "    print(\"=\"*80)\n",
+        "    print(\"📊 LISTENING-BASED REDUNDANCY ANALYSIS\")\n",
+        "    print(\"=\"*80)\n",
+        "    \n",
+        "    # Build track usage map (which tracks are actually played)\n",
+        "    played_tracks = set()\n",
+        "    if 'track_id' in history_df.columns:\n",
+        "        played_tracks = set(history_df['track_id'].dropna().unique())\n",
+        "    else:\n",
+        "        # Match by artist + track name\n",
+        "        played_track_names = set(zip(\n",
+        "            history_df['artist_name'].str.lower().fillna(''),\n",
+        "            history_df['track_name'].str.lower().fillna('')\n",
+        "        ))\n",
+        "        # Match with library tracks\n",
+        "        # Load tracks and artists if not already loaded\n",
+        "        if 'tracks' not in locals() or 'track_artists' not in locals() or 'artists' not in locals():\n",
+        "            tracks = pd.read_parquet(DATA_DIR / \"tracks.parquet\")\n",
+        "            track_artists = pd.read_parquet(DATA_DIR / \"track_artists.parquet\")\n",
+        "            artists = pd.read_parquet(DATA_DIR / \"artists.parquet\")\n",
+        "        \n",
+        "        library_track_names = tracks.merge(\n",
+        "            track_artists[track_artists['position'] == 0],\n",
+        "            on='track_id'\n",
+        "        ).merge(artists[['artist_id', 'name']], on='artist_id')\n",
+        "        library_track_set = set(zip(\n",
+        "            library_track_names['name_x'].str.lower().fillna(''),\n",
+        "            library_track_names['name_y'].str.lower().fillna('')\n",
+        "        ))\n",
+        "        # Get track IDs for played tracks\n",
+        "        matched = library_track_names[\n",
+        "            library_track_names.apply(\n",
+        "                lambda row: (row['name_x'].lower(), row['name_y'].lower()) in played_track_names,\n",
+        "                axis=1\n",
+        "            )\n",
+        "        ]\n",
+        "        played_tracks = set(matched['track_id'].unique())\n",
+        "    \n",
+        "    # Analyze playlist usage\n",
+        "    print(\"\\n📊 Playlist Usage Analysis:\")\n",
+        "    print(\"   (Playlists where tracks are actually played vs. just saved)\\n\")\n",
+        "    \n",
+        "    unused_playlists = []\n",
+        "    low_usage_playlists = []\n",
+        "    \n",
+        "    for pid in playlist_track_sets.keys():\n",
+        "        playlist_tracks_set = playlist_track_sets[pid]\n",
+        "        if not playlist_tracks_set:\n",
+        "            continue\n",
+        "        \n",
+        "        # Count how many tracks from this playlist were actually played\n",
+        "        played_from_playlist = playlist_tracks_set & played_tracks\n",
+        "        usage_rate = len(played_from_playlist) / len(playlist_tracks_set) if playlist_tracks_set else 0\n",
+        "        \n",
+        "        info = playlist_info[pid]\n",
+        "        \n",
+        "        if usage_rate == 0:\n",
+        "            unused_playlists.append((pid, info['name'], len(playlist_tracks_set)))\n",
+        "        elif usage_rate < 0.1:  # Less than 10% usage\n",
+        "            low_usage_playlists.append((pid, info['name'], len(playlist_tracks_set), usage_rate * 100))\n",
+        "    \n",
+        "    if unused_playlists:\n",
+        "        print(f\"🗑️  UNUSED PLAYLISTS ({len(unused_playlists)} playlists - 0% tracks played):\")\n",
+        "        for pid, name, track_count in sorted(unused_playlists, key=lambda x: x[2], reverse=True)[:10]:\n",
+        "            print(f\"   • {name} ({track_count} tracks) - Never played from\")\n",
+        "        if len(unused_playlists) > 10:\n",
+        "            print(f\"   ... and {len(unused_playlists) - 10} more\")\n",
+        "    \n",
+        "    if low_usage_playlists:\n",
+        "        print(f\"\\n⚠️  LOW USAGE PLAYLISTS ({len(low_usage_playlists)} playlists - <10% tracks played):\")\n",
+        "        for pid, name, track_count, usage_pct in sorted(low_usage_playlists, key=lambda x: x[3])[:10]:\n",
+        "            print(f\"   • {name} ({track_count} tracks) - {usage_pct:.1f}% usage\")\n",
+        "        if len(low_usage_playlists) > 10:\n",
+        "            print(f\"   ... and {len(low_usage_playlists) - 10} more\")\n",
+        "    \n",
+        "    if not unused_playlists and not low_usage_playlists:\n",
+        "        print(\"   ✅ All playlists have good usage rates!\")\n",
+        "    \n",
+        "    # Listening-weighted similarity\n",
+        "    print(\"\\n\\n📊 Listening-Weighted Similarity Analysis:\")\n",
+        "    print(\"   (Playlists with similar listening patterns, even if track overlap is low)\\n\")\n",
+        "    \n",
+        "    # Build listening frequency per track\n",
+        "    track_listen_counts = {}\n",
+        "    if 'track_id' in history_df.columns:\n",
+        "        track_listen_counts = history_df.groupby('track_id').size().to_dict()\n",
+        "    else:\n",
+        "        # Count by artist + track name\n",
+        "        track_name_counts = history_df.groupby(['artist_name', 'track_name']).size()\n",
+        "        # Match to track IDs\n",
+        "        for (artist, track), count in track_name_counts.items():\n",
+        "            # Load tracks and artists if not already loaded\n",
+        "            if 'tracks' not in locals() or 'track_artists' not in locals() or 'artists' not in locals():\n",
+        "                tracks = pd.read_parquet(DATA_DIR / \"tracks.parquet\")\n",
+        "                track_artists = pd.read_parquet(DATA_DIR / \"track_artists.parquet\")\n",
+        "                artists = pd.read_parquet(DATA_DIR / \"artists.parquet\")\n",
+        "            \n",
+        "            matches = tracks.merge(\n",
+        "                track_artists[track_artists['position'] == 0],\n",
+        "                on='track_id'\n",
+        "            ).merge(artists[['artist_id', 'name']], on='artist_id')\n",
+        "            matches = matches[\n",
+        "                (matches['name_x'].str.lower() == track.lower()) &\n",
+        "                (matches['name_y'].str.lower() == artist.lower())\n",
+        "            ]\n",
+        "            if len(matches) > 0:\n",
+        "                track_listen_counts[matches.iloc[0]['track_id']] = count\n",
+        "    \n",
+        "    # Calculate listening-weighted similarity\n",
+        "    listening_redundant = []\n",
+        "    for i, (pid1, set1) in enumerate(playlist_track_sets.items()):\n",
+        "        if not set1:\n",
+        "            continue\n",
+        "        for j, (pid2, set2) in enumerate(playlist_track_sets.items()):\n",
+        "            if i >= j or not set2:\n",
+        "                continue\n",
+        "            \n",
+        "            # Get shared tracks\n",
+        "            shared = set1 & set2\n",
+        "            if not shared:\n",
+        "                continue\n",
+        "            \n",
+        "            # Calculate listening-weighted similarity\n",
+        "            shared_listens = sum(track_listen_counts.get(tid, 0) for tid in shared)\n",
+        "            total_listens_1 = sum(track_listen_counts.get(tid, 0) for tid in set1)\n",
+        "            total_listens_2 = sum(track_listen_counts.get(tid, 0) for tid in set2)\n",
+        "            \n",
+        "            if total_listens_1 == 0 or total_listens_2 == 0:\n",
+        "                continue\n",
+        "            \n",
+        "            # Similarity based on shared listening frequency\n",
+        "            listening_sim = shared_listens / max(total_listens_1, total_listens_2)\n",
+        "            \n",
+        "            # Also check traditional Jaccard\n",
+        "            jaccard = jaccard_similarity(set1, set2)\n",
+        "            \n",
+        "            # If listening similarity is high but Jaccard is low, they serve similar purpose\n",
+        "            if listening_sim > 0.5 and jaccard < 0.7:\n",
+        "                info1 = playlist_info[pid1]\n",
+        "                info2 = playlist_info[pid2]\n",
+        "                listening_redundant.append((pid1, pid2, info1['name'], info2['name'], jaccard, listening_sim))\n",
+        "    \n",
+        "    if listening_redundant:\n",
+        "        print(f\"🔗 FUNCTIONALLY REDUNDANT PLAYLISTS ({len(listening_redundant)} pairs):\")\n",
+        "        print(\"   (Different tracks but similar listening patterns)\\n\")\n",
+        "        for pid1, pid2, name1, name2, jaccard, listening_sim in sorted(listening_redundant, key=lambda x: x[5], reverse=True)[:10]:\n",
+        "            print(f\"   • {name1} ↔ {name2}\")\n",
+        "            print(f\"     Track overlap: {jaccard*100:.1f}%, Listening similarity: {listening_sim*100:.1f}%\")\n",
+        "        if len(listening_redundant) > 10:\n",
+        "            print(f\"   ... and {len(listening_redundant) - 10} more pairs\")\n",
+        "    else:\n",
+        "        print(\"   ✅ No functionally redundant playlists found based on listening patterns\")\n",
+        "    \n",
+        "    print(\"\\n💡 Recommendations:\")\n",
+        "    print(\"   • Consider deleting unused playlists (0% usage)\")\n",
+        "    print(\"   • Review low usage playlists - they may be outdated\")\n",
+        "    print(\"   • Functionally redundant playlists might be merged even with low track overlap\")\n",
+        "else:\n",
+        "    print(\"⚠️  No streaming history data available\")\n",
+        "    print(\"   Run the streaming history sync in 04_analyze_listening_history.ipynb to enable this analysis\")\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## ✅ Done!\n"
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
@@ -1490,6 +1673,9 @@
         "3. Delete/merge playlists in Spotify\n",
         "4. Re-run `01_sync_data.ipynb` to update your library\n",
         "5. Re-run this notebook to verify cleanup\n",
+        "\n",
+        "**Workflow:**\n",
+        "- `01_sync_data.ipynb` → `02_analyze_library.ipynb` → `03_playlist_analysis.ipynb` → `04_analyze_listening_history.ipynb` → `05_liked_songs_monthly_playlists.ipynb` → `06_identify_redundant_playlists.ipynb`\n",
         "\n",
         "**Note:** Always verify recommendations manually before deleting playlists!\n"
       ]
